Revert "Split up integration tests to avoid OOM errors on CI"
This reverts commit 35d39606813144f2012d12da104c63ab7e1df55b.